# MRM_ljmd

./: .gitignore  CMakeLists.txt  Plots.ipynb  README.md  funcs_and_types.py  ljmd.py  test.txt
examples/: Makefile  argon_108.inp  argon_108.xyz
include/: allocate.h  cell.h  cleanup.h  constants.h  force_compute.h  input.h  mpi_funcs.h  output.h  types.h  utilities.h  verlet.h
src/: allocate.c  cell.c  cleanup.c  constants.c  force_compute.c  force_compute.h  input.c  input.h  ljmd.c  main.c  main.cpp  mpi_funcs.c  output.c  output.h  types.h  utilities.c  verlet.c  verlet.h
tests/: minimal_input.txt  test_ekin.cpp  test_force.cpp  test_force_compute.cpp  test_read.cpp  test_utils.cpp  test_verlet.cpp
